# COT-chatbot

./: README.md
ml-core-service/: .faq_ingestion_state.json  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
ml-core-service/api/: main.py
ml-core-service/config/: settings.py
ml-core-service/source/agent/: graph.py  nodes.py  state.py
ml-core-service/source/ingestion/: ingest_faq.py  ingest_local.py  processor.py  s3_watcher.py
ml-core-service/source/rag_core/: generator.py  retriever.py
