[project]
name = "coachontap-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "llama-parse>=0.4.0",
    "google-generativeai>=0.5.0",
    "langgraph>=0.0.30",
    "pydantic-settings>=2.2.0",
    "firecrawl-py==1.12.0",
    "gputil==1.4.0",
    "ipykernel>=6.29.5",
    "loguru==0.7.2",
    "pymongo==4.11.1",
    "streamlit==1.42.0",
    "streamlit-float==0.3.4",
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "qdrant-client>=1.9.0",
    "langsmith>=0.1.0",
    "langsmith>=0.1.0",
]

[tool.setuptools]
packages = ["source", "api", "config"]
